--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Resume Page Template</title>
+    <title>勇闯天涯日志</title>
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap-4.4.1.css" rel="stylesheet">
   </head>
@@ -115,7 +115,7 @@
             <li>烤肠</li>
             <li>炫烤肠</li>
             <li>再烤肠</li>
-			<li>再炫肠</li>
+			<li>再炫烤肠</li>
           </ul>
         </div>
         <div class="col-md-6 col-sm-12">
